# product-similarity-search

./: Cargo.toml  index.html  output.csv  product-similarity-search-2f6f94a29379a032.js
.github/workflows/: web.yml
src/: main.rs
