[package]
name = "product-similarity-search"
version = "0.1.0"
edition = "2024"

[dependencies]
# rand = "0.9.2"
egui_plot = "0.34.0"
eframe = "0.33.2"
egui = "0.33.2"
egui_extras = "0.33.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.10.1"
csv = "1.4.0"
poll-promise = "0.3.0"
futures = "0.3.31"
wasm-bindgen-futures = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3.70", features = [
  'Window',
  'HtmlAnchorElement',
] }
js-sys = "0.3"
rfd = "0.16.0"